# vss

./: .claude.json  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  demo_setup.py  docker-compose.yml  package-lock.json  requirement.md
backend/: .dockerignore  .env  CLAUDE.md  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/.claude/: settings.local.json
backend/api/: dependencies.py  error_handler.py
backend/api/block/: routes.py  schemas.py
backend/api/graph/: routes.py  schemas.py
backend/api/route/: routes.py  schemas.py
backend/api/schedule/: routes.py  schemas.py
backend/api/service/: routes.py  schemas.py
backend/api/shared/: schemas.py
backend/api/vehicle/: routes.py  schemas.py
backend/application/block/: service.py
backend/application/graph/: dto.py  node_layout_repository.py  service.py
backend/application/schedule/: README.md  dto.py  model.py  network_layout.py  route_variant.py  schedule_service.py  solver.py
backend/application/service/: dto.py  errors.py  service.py
backend/application/vehicle/: service.py
backend/domain/: error.py
backend/domain/block/: model.py  repository.py
backend/domain/domain_service/: conflict.py  route_builder.py  route_finder.py
backend/domain/network/: model.py  pathfinder.py  ports.py  repository.py  service.py
backend/domain/read_model/: layout.py
backend/domain/service/: conflict.py  model.py  repository.py
backend/domain/shared/: types.py
backend/domain/station/: model.py  repository.py
backend/domain/vehicle/: model.py  repository.py
backend/infra/: seed.py
backend/infra/block/: repository.py
backend/infra/memory/: block_repo.py  connection_repo.py  node_layout_repo.py  service_repo.py  vehicle_repo.py
backend/infra/postgres/: block_repo.py  connection_repo.py  layout_repo.py  node_layout_repo.py  seed.py  service_repo.py  session.py  station_repo.py  tables.py  vehicle_repo.py
backend/infra/service/: repository.py
backend/openspec/: config.yaml
backend/scripts/: install-compose.sh  setup-test-db.sh
backend/tests/: conftest.py  pg_config.py
backend/tests/api/: conftest.py  (+8 more)
(+455 files in other folders)
