[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "import-linter>=2.1",
    "pre-commit>=4.5.1",
    "psycopg-binary>=3.3.3",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]

[tool.importlinter]
root_packages = ["api", "application", "domain", "infra"]

[[tool.importlinter.contracts]]
name = "domain has no outward dependencies"
type = "independence"
modules = ["domain"]

[[tool.importlinter.contracts]]
name = "layered architecture"
type = "layers"
layers = [
    "api",
    "application",
    "domain",
]

[[tool.importlinter.contracts]]
name = "infra only depends on domain"
type = "forbidden"
source_modules = ["infra"]
forbidden_modules = ["api", "application"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "postgres: tests requiring a running PostgreSQL instance",
]
addopts = "-m 'not postgres'"

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["api", "application", "domain", "infra", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
